crates/core/tests/fsm_trybuild/forgot_name_fail.stderr
error: expected `name`
 --> tests/fsm_trybuild/forgot_name_fail.rs:4:5
  |
4 |     One --(A)--> Two
  |     ^^^

error: The fsm definition should begin with `name MachineName; command CommandType; error ErrorType;` optionally followed by `shared_state SharedStateType;`
 --> tests/fsm_trybuild/forgot_name_fail.rs:4:5
  |
4 |     One --(A)--> Two
  |     ^^^
