crates/core/tests/fsm_trybuild/forgot_name_fail.rs
use temporalio_macros::fsm;

fsm! {
    One --(A)--> Two
}

#[derive(Default, Clone)]
pub struct One {}
#[derive(Default, Clone)]
pub struct Two {}

fn main() {}
